# grpc_push_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ci-build.py
cmake/: ios.toolchain.cmake  windows_support.cmake
include/: EduPushIf.h  ServiceTransPushIf.h  push_sdk.h  smsif.h
src/: CMakeLists.txt  push_sdk.cpp  smsif.cpp
src/common/: BuildConfig.h  CheckCondition.h  CheckStatus.h  EgcGrpcLog.cpp  EgcGrpcLog.h  EgcQueue.h  EgcSingleton.h  EgcUtils.cpp  EgcUtils.h  PlatformDefine.cpp  PlatformDefine.h  SLog.cpp  SLog.h  Singleton.h  TaskQueue.cpp  TaskQueue.h  TimeStamp.cpp  TimeStamp.h  config.h  err_code.h  http_client.cpp  http_client.h  log.cpp  log.h  singleton.h  utils.cpp  utils.h
src/core/: CMakeLists.txt  Egc.h  EgcCallback.h  EgcConsts.h  EgcError.cpp  EgcError.h  EgcInit.cpp  EgcInit.h  EgcInternalEvent.cpp  EgcInternalEvent.h  EgcListener.cpp  EgcListener.h  EgcProtoHelper.cpp  EgcProtoHelper.h  EgcRpcClient.cpp  EgcRpcClient.h  EgcRpcDelegate.h  EgcRpcInc.h  EgcRpcStream.cpp  EgcRpcStream.h  ServiceTransMain.cpp  ServiceTransMain.h  ServiceTransPushIf.cpp  ServiceTransPushIf.h  client.cpp  client.h  core.cpp  core.h  impl.cpp  packet.cpp  packet.h  smsif.cpp  stream.cpp  stream.h  type.cpp  type.h
src/core/resolver/: EgcResolveAddress.cpp  EgcResolveAddress.h  EgcResolver.cpp  EgcResolver.h  EgcResolverConfig.h  EgcResolverInc.h  EgcResolverPlugin.h  EgcResolverSnfs.cpp  EgcResolverSnfs.h
src/elk/: async_elk.h  async_upload.cpp  async_upload.h  upload_request.h
src/proto/: gen-api.sh  pushGateWay.grpc.pb.cc  pushGateWay.grpc.pb.h  pushGateWay.pb.cc  pushGateWay.pb.h  pushGateWay.proto
